--- a/src/index.scss
+++ b/src/index.scss
@@ -48,3 +48,20 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.home-page {
+  border: 5px solid gray;
+  font-weight: bolder;
+  padding: 10px;
+  text-decoration: underline;
+}
+
+.home-page-buttons {
+  display: flex;
+  margin: 10px;
+}
+
+h5 {
+  text-align: center;
+  color: green;
+}
