--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,10 @@ body {
   margin: 10px;
 }
 
+.hom-page-h1 {
+  text-shadow: 0 3px 0 #b2a98f, 0 10px 10px rgba(0,0,0,0.15), 0 10px 2px rgba(0,0,0,0.1), 0 30px 30px rgba(0,0,0,0.1);
+}
+
 h1 {
   text-align: center;
 }
@@ -72,4 +76,12 @@ h1 {
 h5 {
   text-align: center;
   color: green;
+}
+
+.saving-transaction {
+  display: inline-block;
+}
+
+.saving-trans-hist {
+  display: flex;
 }
