--- a/src/index.scss
+++ b/src/index.scss
@@ -51,6 +51,7 @@ body {
 
 .home-page {
   border: 5px solid gray;
+  background-color: #87CEEB;
   font-weight: bolder;
   padding: 10px;
   text-align: center;
@@ -75,11 +76,15 @@ h1 {
 
 h5 {
   text-align: center;
-  color: green;
+  color: #8B4513;
+}
+
+h3 {
+  text-align: center;
 }
 
 .saving-transaction {
-  display: inline-flex;
+  display: inline-block;
 }
 
 .saving-trans-hist {
